k8s/media-stack/patches/image-pull-policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  template:
    spec:
      containers:
        - name: sabnzbd
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  template:
    spec:
      containers:
        - name: sonarr
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  template:
    spec:
      containers:
        - name: radarr
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: media
spec:
  template:
    spec:
      containers:
        - name: vaultwarden
          imagePullPolicy: Always
